--- a/stats.ipynb
+++ b/stats.ipynb
@@ -12,8 +12,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Tutorial on building a logistic Model for predicting risk of software changes\n",
-      "=============================================================================\n",
+      "A tutorial on logistic models (for predicting risk of software changes)\n",
+      "======\n",
       "Full data is at:\n",
       "  http://mockus.org/riskTut.zip and\n",
       "\n",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -55,7 +55,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -98,7 +98,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 7,
        "text": [
         "     isBad           lNS            lNM           lNF          lNLgn    \n",
         " Min.   :0.00   Min.   :0.00   Min.   :0.0   Min.   :0.0   Min.   :0.0  \n",
@@ -124,7 +124,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -147,7 +147,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 8,
        "text": [
         "        isBad    lNS    lNM     lNF  lNLgn   lNMR    lND     lLA     lLD   lLOC\n",
         "isBad  1.0000  0.128  0.137  0.1308  0.124  0.142  0.136  0.1280  0.1211  0.118\n",
@@ -186,7 +186,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 8,
        "text": [
         "        isBad    lNS     lNM     lNF  lNLgn   lNMR    lND    lLA    lLD   lLOC\n",
         "isBad  1.0000  0.100  0.1084  0.1097  0.100  0.113  0.113  0.115  0.105  0.106\n",
@@ -223,22 +223,20 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 8
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
       "Interpret correlations"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now, just see top corelations"
+      "Now, just show top correlations"
      ]
     },
     {
@@ -263,7 +261,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 9,
        "text": [
         "         lNS     lNM     lNF   lNMR    lND    lLA    lLD   lLOC    lEXP   lREXP\n",
         "lNS    1.000  0.7551  0.6501  0.652  0.577  0.512  0.477  0.489 -0.0272 -0.0191\n",
@@ -279,17 +277,16 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 9
     },
     {
-     "cell_type": "heading",
-     "level": 2,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "So much correlation is typical in SE\n",
-      "How to select an orthogonal subset of predictors?\n",
+      "## So much correlation is typical in SE\n",
+      "* How to select an orthogonal subset of predictors?\n",
       "\n",
-      "  Take a look at principal components"
+      "Lets take a look at principal components"
      ]
     },
     {
@@ -328,15 +325,14 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 10
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Regress each predictor on the remaining predictors\n",
-      " eliminate with the highest adjR^2"
+      "* Regress each predictor on the remaining predictors\n",
+      "eliminate with the highest adjR^2"
      ]
     },
     {
@@ -358,7 +354,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 11,
        "text": [
         "      [,1] [,2]\n",
         "lEXP    12 0.95\n",
@@ -378,14 +374,13 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 11
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Finally select the model\n",
+      "### Finally select the model\n",
       "  Note, that exploring only the predictor space is not leading to\n",
       "     multiple comparisons issue!\n",
       "\n",
@@ -405,21 +400,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 12,
        "text": [
         "fmla ~ isBad ~ lNS + lLA + FIX + lLOC + lINT + lEXP\n",
-        "<environment: 0x2dc7b08>"
+        "<environment: 0x2c828b0>"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 12
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We'll need to do prediction, so drop last few years"
+      "* We'll need to do prediction, so drop last few years"
      ]
     },
     {
@@ -434,7 +428,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -449,7 +443,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 14,
        "text": [
         "\n",
         "Call:\n",
@@ -482,23 +476,22 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 14
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
       "Note AIC: 2753\n",
-      "lINT probably not important"
+      "\n",
+      "threfore lINT probably not important"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Good to order by variance explained (Anova Deviance/Df)"
+      "### Good to order by variance explained (Anova Deviance/Df)"
      ]
     },
     {
@@ -513,7 +506,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 15,
        "text": [
         "Analysis of Deviance Table\n",
         "\n",
@@ -537,7 +530,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -547,7 +540,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "ERROR",
+       "evalue": "Error in parse(text = x, srcfile = src): <text>:1:3: unexpected symbol\n1: A similar\n      ^\n",
+       "output_type": "pyerr",
+       "traceback": [
+        "Error in parse(text = x, srcfile = src): <text>:1:3: unexpected symbol\n1: A similar\n      ^\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -558,15 +561,50 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "\n",
+        "Call:\n",
+        "glm(formula = isBad ~ lNS + lND + FIX + lEXP + lINT, family = binomial, \n",
+        "    data = dataFit)\n",
+        "\n",
+        "Deviance Residuals: \n",
+        "   Min      1Q  Median      3Q     Max  \n",
+        "-0.851  -0.223  -0.170  -0.135   3.235  \n",
+        "\n",
+        "Coefficients:\n",
+        "            Estimate Std. Error z value Pr(>|z|)    \n",
+        "(Intercept) -4.48210    0.28367  -15.80  < 2e-16 ***\n",
+        "lNS          0.31994    0.11021    2.90   0.0037 ** \n",
+        "lND          0.36503    0.05354    6.82  9.2e-12 ***\n",
+        "FIX          0.52993    0.12873    4.12  3.8e-05 ***\n",
+        "lEXP        -0.10508    0.03799   -2.77   0.0057 ** \n",
+        "lINT         0.01847    0.00941    1.96   0.0496 *  \n",
+        "---\n",
+        "Signif. codes:  0 \u2018***\u2019 0.001 \u2018**\u2019 0.01 \u2018*\u2019 0.05 \u2018.\u2019 0.1 \u2018 \u2019 1\n",
+        "\n",
+        "(Dispersion parameter for binomial family taken to be 1)\n",
+        "\n",
+        "    Null deviance: 3011.5  on 13480  degrees of freedom\n",
+        "Residual deviance: 2750.4  on 13475  degrees of freedom\n",
+        "AIC: 2762\n",
+        "\n",
+        "Number of Fisher Scoring iterations: 7\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Slightly higher AIC: 2762, but a simpler model\n",
-      "   * don't chace the best fit, as it leads to overfitting"
+      "### Slightly higher AIC: 2762, but a simpler model\n",
+      "   * don't chase the best fit, as it leads to overfitting"
      ]
     },
     {
@@ -581,7 +619,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 18,
        "text": [
         "Analysis of Deviance Table\n",
         "\n",
@@ -594,29 +632,27 @@
         "\n",
         "     Df Deviance Resid. Df Resid. Dev Pr(>Chi)    \n",
         "NULL                 13480       3012             \n",
-        "lNS   1    166.1     13479       2845   <2e-16 ***\n",
-        "lLA   1     65.1     13478       2780    7e-16 ***\n",
-        "FIX   1     17.4     13477       2763    3e-05 ***\n",
-        "lLOC  1     10.7     13476       2752   0.0011 ** \n",
-        "lINT  1      5.5     13475       2747   0.0193 *  \n",
-        "lEXP  1      7.7     13474       2739   0.0054 ** \n",
+        "lNS   1    166.1     13479       2845  < 2e-16 ***\n",
+        "lND   1     64.3     13478       2781  1.1e-15 ***\n",
+        "FIX   1     17.7     13477       2763  2.6e-05 ***\n",
+        "lEXP  1      9.3     13476       2754   0.0024 ** \n",
+        "lINT  1      3.8     13475       2750   0.0502 .  \n",
         "---\n",
         "Signif. codes:  0 \u2018***\u2019 0.001 \u2018**\u2019 0.01 \u2018*\u2019 0.05 \u2018.\u2019 0.1 \u2018 \u2019 1"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 18
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Note: use test=\"F\" for linear models (lm)\n",
-      "Note: R's anova order matters in variance explained, as\n",
+      "* Note: use test=\"F\" for linear models (lm)\n",
+      "* Note: R's anova order matters in variance explained, as\n",
       "  each SS is based on the residuals from predictors going before it\n",
-      "Alternative sum of squares for ANOVA are obtained via drop1\n",
-      "  In this case it is based on the residuals of remaining predictors (not\n",
+      "* Alternative sum of squares for ANOVA are obtained via drop1\n",
+      "*  In this case it is based on the residuals of remaining predictors (not\n",
       "  just of preceeding predictors"
      ]
     },
@@ -632,33 +668,31 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 19,
        "text": [
         "Single term deletions\n",
         "\n",
         "Model:\n",
-        "isBad ~ lNS + lLA + FIX + lLOC + lINT + lEXP\n",
-        "       Df Deviance  AIC   LRT Pr(>Chi)    \n",
-        "<none>        2739 2753                   \n",
-        "lNS     1     2751 2763 12.28  0.00046 ***\n",
-        "lLA     1     2753 2765 14.09  0.00017 ***\n",
-        "FIX     1     2756 2768 16.87    4e-05 ***\n",
-        "lLOC    1     2747 2759  7.71  0.00549 ** \n",
-        "lINT    1     2743 2755  3.72  0.05386 .  \n",
-        "lEXP    1     2747 2759  7.74  0.00540 ** \n",
+        "isBad ~ lNS + lND + FIX + lEXP + lINT\n",
+        "       Df Deviance  AIC  LRT Pr(>Chi)    \n",
+        "<none>        2750 2762                  \n",
+        "lNS     1     2759 2769  8.6   0.0033 ** \n",
+        "lND     1     2795 2805 44.4  2.6e-11 ***\n",
+        "FIX     1     2767 2777 16.8  4.1e-05 ***\n",
+        "lEXP    1     2758 2768  7.5   0.0061 ** \n",
+        "lINT    1     2754 2764  3.8   0.0502 .  \n",
         "---\n",
         "Signif. codes:  0 \u2018***\u2019 0.001 \u2018**\u2019 0.01 \u2018*\u2019 0.05 \u2018.\u2019 0.1 \u2018 \u2019 1"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 19
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Variance inflation factor\n",
+      "### Variance inflation factor\n",
       " http://en.wikipedia.org/wiki/Variance_inflation_factor"
      ]
     },
@@ -666,26 +700,36 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "library(car)\n",
       "vif(mod);"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        " lNS  lND  FIX lEXP lINT \n",
+        " 2.3  3.1  1.2  1.0  1.9 "
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Is less than 5 (max is 3.1 for lND), but lower would be better"
+      "* Is less than 5 (max is 3.1 for lND), but lower would be better"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Exercise: other diagnostics\n",
+      "### Exercise: other diagnostics\n",
       "* is model stable if some data is dropped?\n",
       "* what if we change data as in GDF?\n",
       "* is there a time trend \n",
@@ -694,17 +738,14 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Now interpret the model\n",
       "* What do estimated coefficients mean?\n",
       "* Increase NS from 1 to 2, but other predictors matter\n",
       "* threfore pick values that are reasonable or a median"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     ]
     },
     {
      "cell_type": "code",
@@ -727,18 +768,17 @@
        "prompt_number": 23,
        "text": [
         "  2 \n",
-        "2.5 "
+        "1.9 "
        ]
       }
      ],
      "prompt_number": 23
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The answer is how much the risk increases if number of subsystems touched is increased from 1 to 2\n",
+      "### The answer is how much the risk increases if number of subsystems touched is increased from 1 to 2\n",
       "  * First ratio of risk then \n",
       "  * ratio of odds"
      ]
@@ -764,30 +804,28 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 24,
        "text": [
         "    0     1 \n",
         "0.022 0.060 "
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 24
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Good to know: predicted probability is almost three times higher for the \n",
-      " MRs that break patches"
+      "###Good to know\n",
+      "* predicted probability is almost three times higher for the MRs that break patches"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Traditional performance:"
+      "### Traditional performance:"
      ]
     },
     {
@@ -810,43 +848,40 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[1] 0.010 0.648 0.120 0.880 0.017\n",
-        "[1] 0.015 0.445 0.220 0.780 0.022\n",
-        "[1] 0.020 0.324 0.380 0.620 0.024\n",
-        "[1] 0.030 0.191 0.400 0.600 0.039\n",
-        "[1] 0.040 0.134 0.500 0.500 0.045\n",
-        "[1] 0.045 0.118 0.580 0.420 0.043\n",
-        "[1] 0.100 0.019 0.740 0.260 0.151\n"
+        "[1] 0.010 0.661 0.120 0.880 0.017\n",
+        "[1] 0.015 0.435 0.260 0.740 0.021\n",
+        "[1] 0.020 0.307 0.420 0.580 0.024\n",
+        "[1] 0.030 0.177 0.440 0.560 0.039\n",
+        "[1] 0.040 0.126 0.520 0.480 0.046\n",
+        "[1] 0.045 0.109 0.540 0.460 0.051\n",
+        "[1] 0.100 0.026 0.740 0.260 0.114\n"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 25
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A single number such as ROC typically makes little sense:\n",
-      "* in this case primary concern is decent recall"
+      "### A single number such as ROC typically makes little sense:\n",
+      "* in this case the primary concern is decent recall"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Exercise:\n",
+      "### Exercise:\n",
       "* compare to a random predictor\n",
       "* compare to a simple predictor, e.g, more than one subsystem"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Other prediction methods"
+      "### Try other prediction methods"
      ]
     },
     {
@@ -875,7 +910,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 26,
        "text": [
         "     [,1]  [,2] [,3] [,4]  [,5]\n",
         "[1,]   20 0.087 0.54 0.46 0.064\n",
@@ -887,14 +922,13 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 26
     },
     {
-     "cell_type": "heading",
-     "level": 3,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Slightly worse than the regression model"
+      "### Slightly worse than the regression model"
      ]
     }
    ],
