--- a/stats.ipynb
+++ b/stats.ipynb
@@ -66,6 +66,7 @@
       "\n",
       "What hypothesis is associated with each variable?\n",
       "\n",
+      "\n",
       "| Type       | Name   | Description                             |\n",
       "|------------+--------+-----------------------------------------|\n",
       "| Response   | isBad  | Did MR cause patch to fail?             |\n",
@@ -82,7 +83,7 @@
       "| Purpose    | FIX    | Fix of a defect found in the field.     |\n",
       "|            | EXP    | Developer experience.                   |\n",
       "| Experience | REXP   | Recent developer experience.            |\n",
-      "|            | SEXP   | Developer experience on a subsystem.    | "
+      "|            | SEXP   | Developer experience on a subsystem.    |\n"
      ]
     },
     {
